adiciona documentação do swagger para método de register
